--- a/_config.yml
+++ b/_config.yml
@@ -87,8 +87,8 @@ author:
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=FcX2JlgAAAAJ&hl=en&oi=ao"
-  email            : # "nwitts@uw.edu"
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  email            :  "nwitts@uw.edu"
+  researchgate     :  # "https://www.researchgate.net/profile/Nicolas-Wittstock"
   uri              :
   bitbucket        :
   codepen          :
