--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "NWittstock.JPG"
   bio              : "PhD Candidate, Political Science"
   location         : "Seattle, Washington"
-  employer         :
+  employer         : "University of Washington"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=FcX2JlgAAAAJ&hl=en&oi=ao"
   email            :  "nwitts@uw.edu"
