--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,9 @@ main:
   - title: "Publications"
     url: /publications/
 
+  - title: "Book"
+    url: /portfolio/
+
  # - title: "Teaching"
  #   url: /teaching/  
     
