--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
 
   - title: "CV"
-    url: /files/Resume Wittstock.pdf
+    url: /files/Wittstock Resume.pdf
     
   - title: "Publications"
     url: /publications/
