--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
     url: /publications/
 
   - title: "Book"
-    url: /https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3830957
+    url: https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3830957
 
  # - title: "Teaching"
  #   url: /teaching/  
