--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
     url: /files/Wittstock Resume.pdf
     
    title: "Publications"
-    url: /files/list.md
+    url: /files/Resume Wittstock.pdf
 
   - title: "Book"
     url: https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3830957
