--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,8 +13,8 @@ main:
   - title: "Political Economy Forum" 
     url: https://podcasters.spotify.com/pod/show/uw-politcal-economy/episodes/71---The-Politics-of-Automation---w-Daron-Acemoglu-e1cs86c
 
-  #- title: "Teaching"
-  #  url: /teaching/  
+  - title: "List"
+    url: /files/paper1.pdf 
     
  #- title: "Talks"
  #  url: /talks/      
