--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ main:
     url: https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3830957
 
   - title: "Publications"
-    url: /files/paper1.pdf
+    url: /files/PublicationList.md
 
   - title: "Political Economy Forum" 
     url: https://podcasters.spotify.com/pod/show/uw-politcal-economy/episodes/71---The-Politics-of-Automation---w-Daron-Acemoglu-e1cs86c
