--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
     url: /files/Wittstock Resume.pdf
     
    #title: "Publications"
-   #url: /publications
+   #url: /publications/
 
   - title: "Book"
     url: https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3830957
