--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,11 +17,11 @@ main:
     url: https://podcasters.spotify.com/pod/show/uw-politcal-economy/episodes/71---The-Politics-of-Automation---w-Daron-Acemoglu-e1cs86c
 
     
- #- title: "Talks"
- #  url: /talks/      
+ - title: "Talks"
+   url: /talks/      
     
-  #- title: "Portfolio"
-   # url: /portfolio/
+  - title: "Portfolio"
+    url: /portfolio/
         
   #- title: "Blog Posts"
    # url: /year-archive/
