--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
     url: /files/Wittstock Resume.pdf
     
   - title: "Publications"
-   url: /publications/
+    url: /publications/
 
   - title: "Book"
     url: https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3830957
@@ -13,14 +13,17 @@ main:
   - title: "Political Economy Forum" 
     url: https://podcasters.spotify.com/pod/show/uw-politcal-economy/episodes/71---The-Politics-of-Automation---w-Daron-Acemoglu-e1cs86c
 
- #- title: "Talks"
- #  url: /talks/      
+ # - title: "Teaching"
+ #   url: /teaching/  
+    
+ # - title: "Talks"
+ #   url: /talks/      
     
  # - title: "Portfolio"
  #   url: /portfolio/
         
-  #- title: "Blog Posts"
-   # url: /year-archive/
+ # - title: "Blog Posts"
+ #   url: /year-archive/
     
  # - title: "Guide"
  #   url: /markdown/
