--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Nicolas Wittstock"
-  avatar           : "NWittstock.JPG"
+  avatar           : "IMG_4957.jpg"
   bio              : "PhD Candidate, Political Science"
   location         : "Seattle, Washington"
   employer         : "University of Washington"
