--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Nicolas Wittstock"
   avatar           : "IMG_4957.jpg"
-  bio              : "PhD Candidate, Political Science"
+  bio              : "Ph.D., Political Science"
   location         : "Seattle, Washington"
   employer         : "University of Washington"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
