--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,8 @@
 main:
 
   - title: "CV"
-    url: /files/Wittstock Resume.pdf
+    url: /files/Wittstock_Resume_July_2024 (2).pdf
+
     
   - title: "Publications"
     url: /publications/
