--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,11 +17,11 @@ main:
  # - title: "Teaching"
  #   url: /teaching/  
     
-  - title: "Talks"
-    url: /talks/      
+ #  - title: "Talks"
+ #   url: /talks/      
     
- # - title: "Portfolio"
- #   url: /portfolio/
+  - title: "Portfolio"
+    url: /portfolio/
         
  # - title: "Blog Posts"
  #   url: /year-archive/
