--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,11 +20,11 @@ main:
  #  - title: "Talks"
  #   url: /talks/      
     
-  - title: "Portfolio"
+  - title: "Media"
     url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+ # - title: "Blog Posts"
+ #   url: /year-archive/
     
  # - title: "Guide"
  #   url: /markdown/
