--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Nicolas Wittstock"
   avatar           : "IMG_4857.jpg"
   bio              : "Ph.D., Political Science, University of Washington"
-  location         : "Seattle, Washington"
-  employer         : "University of Washington"
+  location         : "Arlington, VA"
+  employer         : "University of California Institute on Global Conflict and Cooperation"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=FcX2JlgAAAAJ&hl=en&oi=ao"
   email            :  "nwitts@uw.edu"
