--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
 
   - title: "CV"
-    url: /files/Wittstock_Resume_July_2024 (3).pdf
+    url: /files/CV Wittstock.pdf
 
     
   - title: "Publications"
