--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
     url: /publications/
 
   - title: "Book"
-    url: https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3830957
+    url: https://www.cambridge.org/core/elements/abs/us-innovation-inequality-and-trumpism/C776AE4B324EFA670C12637A542ABE0D
 
   - title: "Political Economy Forum" 
     url: https://podcasters.spotify.com/pod/show/uw-politcal-economy/episodes/71---The-Politics-of-Automation---w-Daron-Acemoglu-e1cs86c
